src/asmjit/parsers/resrc/ResourceParser.py
# Generated from compiler/grammar/ResourceParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ResourceParser ( Parser ):

    grammarFileName = "ResourceParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'{'", "'}'", "'('", "')'", "','", "'|'", 
                     "'&'", "'^'", "'~'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'<<'", "'>>'" ]

    symbolicNames = [ "<INVALID>", "BEGIN", "END", "LANGUAGE", "CHARACTERISTICS", 
                      "VERSION", "STRINGTABLE", "VERSIONINFO", "FILEVERSION", 
                      "PRODUCTVERSION", "FILEFLAGSMASK", "FILEFLAGS", "FILEOS", 
                      "FILETYPE", "FILESUBTYPE", "BLOCK", "VALUE", "MENU", 
                      "MENUEX", "MENUITEM", "POPUP", "SEPARATOR", "CHECKED", 
                      "GRAYED", "HELP", "INACTIVE", "MENUBARBREAK", "MENUBREAK", 
                      "ACCELERATORS", "VIRTKEY", "ASCII", "NOINVERT", "SHIFT", 
                      "CONTROL", "ALT", "DIALOG", "DIALOGEX", "STYLE", "EXSTYLE", 
                      "CAPTION", "CLASS", "FONT", "AUTO3STATE", "AUTOCHECKBOX", 
                      "AUTORADIOBUTTON", "CHECKBOX", "COMBOBOX", "CTEXT", 
                      "DEFPUSHBUTTON", "EDITTEXT", "GROUPBOX", "ICONCONTROL", 
                      "LISTBOX", "LTEXT", "PUSHBOX", "PUSHBUTTON", "RADIOBUTTON", 
                      "RTEXT", "SCROLLBAR", "STATE3", "USERBUTTON", "BITMAP", 
                      "CURSOR", "RCDATA", "HTML", "MANIFEST", "MESSAGETABLE", 
                      "DLGINIT", "AVI", "TYPELIB", "MOVEABLE", "FIXED", 
                      "PURE", "IMPURE", "PRELOAD", "LOADONCALL", "DISCARDABLE", 
                      "LBRACE", "RBRACE", "LPAREN", "RPAREN", "COMMA", "PIPE", 
                      "AMP", "CARET", "TILDE", "PLUS", "MINUS", "STAR", 
                      "SLASH", "PERCENT", "LSHIFT", "RSHIFT", "WIDE_STRING", 
                      "STRING", "INTEGER", "IDENTIFIER", "NL", "WS", "LINE_COMMENT", 
                      "BLOCK_COMMENT" ]

    RULE_resourceScript = 0
    RULE_resourceStatement = 1
    RULE_languageStatement = 2
    RULE_characteristicsStatement = 3
    RULE_versionStatement = 4
    RULE_resourceId = 5
    RULE_resourceType = 6
    RULE_resourceOptions = 7
    RULE_fileResource = 8
    RULE_fileResourceKind = 9
    RULE_fileResourceType = 10
    RULE_rawResource = 11
    RULE_rawResourceType = 12
    RULE_rawDataBlock = 13
    RULE_rawDataItemList = 14
    RULE_rawDataItem = 15
    RULE_stringTableResource = 16
    RULE_stringEntry = 17
    RULE_versionInfoResource = 18
    RULE_fixedVersionLine = 19
    RULE_quadExpression = 20
    RULE_versionElement = 21
    RULE_versionBlock = 22
    RULE_versionValue = 23
    RULE_versionValueItem = 24
    RULE_menuResource = 25
    RULE_menuItem = 26
    RULE_menuFlags = 27
    RULE_acceleratorsResource = 28
    RULE_acceleratorEntry = 29
    RULE_acceleratorKey = 30
    RULE_acceleratorFlags = 31
    RULE_dialogResource = 32
    RULE_dialogKind = 33
    RULE_dialogHeaderLine = 34
    RULE_dialogControl = 35
    RULE_controlWithText = 36
    RULE_controlWithoutText = 37
    RULE_stringLiteral = 38
    RULE_separator = 39
    RULE_blockStart = 40
    RULE_blockEnd = 41
    RULE_eol = 42
    RULE_expression = 43
    RULE_bitOrExpression = 44
    RULE_bitXorExpression = 45
    RULE_bitAndExpression = 46
    RULE_shiftExpression = 47
    RULE_additiveExpression = 48
    RULE_multiplicativeExpression = 49
    RULE_unaryExpression = 50
    RULE_primaryExpression = 51

    ruleNames =  [ "resourceScript", "resourceStatement", "languageStatement", 
                   "characteristicsStatement", "versionStatement", "resourceId", 
                   "resourceType", "resourceOptions", "fileResource", "fileResourceKind", 
                   "fileResourceType", "rawResource", "rawResourceType", 
                   "rawDataBlock", "rawDataItemList", "rawDataItem", "stringTableResource", 
                   "stringEntry", "versionInfoResource", "fixedVersionLine", 
                   "quadExpression", "versionElement", "versionBlock", "versionValue", 
                   "versionValueItem", "menuResource", "menuItem", "menuFlags", 
                   "acceleratorsResource", "acceleratorEntry", "acceleratorKey", 
                   "acceleratorFlags", "dialogResource", "dialogKind", "dialogHeaderLine", 
                   "dialogControl", "controlWithText", "controlWithoutText", 
                   "stringLiteral", "separator", "blockStart", "blockEnd", 
                   "eol", "expression", "bitOrExpression", "bitXorExpression", 
                   "bitAndExpression", "shiftExpression", "additiveExpression", 
                   "multiplicativeExpression", "unaryExpression", "primaryExpression" ]

    EOF = Token.EOF
    BEGIN=1
    END=2
    LANGUAGE=3
    CHARACTERISTICS=4
    VERSION=5
    STRINGTABLE=6
    VERSIONINFO=7
    FILEVERSION=8
    PRODUCTVERSION=9
    FILEFLAGSMASK=10
    FILEFLAGS=11
    FILEOS=12
    FILETYPE=13
    FILESUBTYPE=14
    BLOCK=15
    VALUE=16
    MENU=17
    MENUEX=18
    MENUITEM=19
    POPUP=20
    SEPARATOR=21
    CHECKED=22
    GRAYED=23
    HELP=24
    INACTIVE=25
    MENUBARBREAK=26
    MENUBREAK=27
    ACCELERATORS=28
    VIRTKEY=29
    ASCII=30
    NOINVERT=31
    SHIFT=32
    CONTROL=33
    ALT=34
    DIALOG=35
    DIALOGEX=36
    STYLE=37
    EXSTYLE=38
    CAPTION=39
    CLASS=40
    FONT=41
    AUTO3STATE=42
    AUTOCHECKBOX=43
    AUTORADIOBUTTON=44
    CHECKBOX=45
    COMBOBOX=46
    CTEXT=47
    DEFPUSHBUTTON=48
    EDITTEXT=49
    GROUPBOX=50
    ICONCONTROL=51
    LISTBOX=52
    LTEXT=53
    PUSHBOX=54
    PUSHBUTTON=55
    RADIOBUTTON=56
    RTEXT=57
    SCROLLBAR=58
    STATE3=59
    USERBUTTON=60
    BITMAP=61
    CURSOR=62
    RCDATA=63
    HTML=64
    MANIFEST=65
    MESSAGETABLE=66
    DLGINIT=67
    AVI=68
    TYPELIB=69
    MOVEABLE=70
    FIXED=71
    PURE=72
    IMPURE=73
    PRELOAD=74
    LOADONCALL=75
    DISCARDABLE=76
    LBRACE=77
    RBRACE=78
    LPAREN=79
    RPAREN=80
    COMMA=81
    PIPE=82
    AMP=83
    CARET=84
    TILDE=85
    PLUS=86
    MINUS=87
    STAR=88
    SLASH=89
    PERCENT=90
    LSHIFT=91
    RSHIFT=92
    WIDE_STRING=93
    STRING=94
    INTEGER=95
    IDENTIFIER=96
    NL=97
    WS=98
    LINE_COMMENT=99
    BLOCK_COMMENT=100

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ResourceScriptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ResourceParser.EOF, 0)

        def eol(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ResourceParser.EolContext)
            else:
                return self.getTypedRuleContext(ResourceParser.EolContext,i)


        def resourceStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ResourceParser.ResourceStatementContext)
            else:
                return self.getTypedRuleContext(ResourceParser.ResourceStatementContext,i)


        def getRuleIndex(self):
            return ResourceParser.RULE_resourceScript

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterResourceScript" ):
                listener.enterResourceScript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitResourceScript" ):
                listener.exitResourceScript(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitResourceScript" ):
                return visitor.visitResourceScript(self)
            else:
                return visitor.visitChildren(self)




    def resourceScript(self):

        localctx = ResourceParser.ResourceScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_resourceScript)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 104
                    self.eol() 
                self.state = 109
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 120) != 0) or ((((_la - 94)) & ~0x3f) == 0 and ((1 << (_la - 94)) & 15) != 0):
                self.state = 110
                self.resourceStatement()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 116
            self.match(ResourceParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ResourceStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def languageStatement(self):
            return self.getTypedRuleContext(ResourceParser.LanguageStatementContext,0)


        def eol(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ResourceParser.EolContext)
            else:
                return self.getTypedRuleContext(ResourceParser.EolContext,i)


        def characteristicsStatement(self):
            return self.getTypedRuleContext(ResourceParser.CharacteristicsStatementContext,0)


        def versionStatement(self):
            return self.getTypedRuleContext(ResourceParser.VersionStatementContext,0)


        def stringTableResource(self):
            return self.getTypedRuleContext(ResourceParser.StringTableResourceContext,0)


        def versionInfoResource(self):
            return self.getTypedRuleContext(ResourceParser.VersionInfoResourceContext,0)


        def menuResource(self):
            return self.getTypedRuleContext(ResourceParser.MenuResourceContext,0)


        def acceleratorsResource(self):
            return self.getTypedRuleContext(ResourceParser.AcceleratorsResourceContext,0)


        def dialogResource(self):
            return self.getTypedRuleContext(ResourceParser.DialogResourceContext,0)


        def fileResource(self):
            return self.getTypedRuleContext(ResourceParser.FileResourceContext,0)


        def rawResource(self):
            return self.getTypedRuleContext(ResourceParser.RawResourceContext,0)


        def getRuleIndex(self):
            return ResourceParser.RULE_resourceStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterResourceStatement" ):
                listener.enterResourceStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitResourceStatement" ):
                listener.exitResourceStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitResourceStatement" ):
                return visitor.visitResourceStatement(self)
            else:
                return visitor.visitChildren(self)




    def resourceStatement(self):

        localctx = ResourceParser.ResourceStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_resourceStatement)
        try:
            self.state = 189
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.languageStatement()
                self.state = 120 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 119
                        self.eol()

                    else:
                        raise NoViableAltException(self)
                    self.state = 122 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.characteristicsStatement()
                self.state = 126 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 125
                        self.eol()

                    else:
                        raise NoViableAltException(self)
                    self.state = 128 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 130
                self.versionStatement()
                self.state = 132 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 131
                        self.eol()

                    else:
                        raise NoViableAltException(self)
                    self.state = 134 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 136
                self.stringTableResource()
                self.state = 140
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 137
                        self.eol() 
                    self.state = 142
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 143
                self.versionInfoResource()
                self.state = 147
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 144
                        self.eol() 
                    self.state = 149
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 150
                self.menuResource()
                self.state = 154
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 151
                        self.eol() 
                    self.state = 156
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 157
                self.acceleratorsResource()
                self.state = 161
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 158
                        self.eol() 
                    self.state = 163
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 164
                self.dialogResource()
                self.state = 168
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 165
                        self.eol() 
                    self.state = 170
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 171
                self.fileResource()
                self.state = 173 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 172
                        self.eol()

                    else:
                        raise NoViableAltException(self)
                    self.state = 175 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 177
                self.rawResource()
                self.state = 181
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 178
                        self.eol() 
                    self.state = 183
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 185 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 184
                        self.eol()

                    else:
                        raise NoViableAltException(self)
                    self.state = 187 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LanguageStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LANGUAGE(self):
            return self.getToken(ResourceParser.LANGUAGE, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ResourceParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ResourceParser.ExpressionContext,i)


        def COMMA(self):
            return self.getToken(ResourceParser.COMMA, 0)

        def getRuleIndex(self):
            return ResourceParser.RULE_languageStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLanguageStatement" ):
                listener.enterLanguageStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLanguageStatement" ):
                listener.exitLanguageStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLanguageStatement" ):
                return visitor.visitLanguageStatement(self)
            else:
                return visitor.visitChildren(self)




    def languageStatement(self):

        localctx = ResourceParser.LanguageStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_languageStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self.match(ResourceParser.LANGUAGE)
            self.state = 192
            self.expression()
            self.state = 193
            self.match(ResourceParser.COMMA)
            self.state = 194
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CharacteristicsStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CHARACTERISTICS(self):
            return self.getToken(ResourceParser.CHARACTERISTICS, 0)

        def expression(self):
            return self.getTypedRuleContext(ResourceParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ResourceParser.RULE_characteristicsStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCharacteristicsStatement" ):
                listener.enterCharacteristicsStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCharacteristicsStatement" ):
                listener.exitCharacteristicsStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCharacteristicsStatement" ):
                return visitor.visitCharacteristicsStatement(self)
            else:
                return visitor.visitChildren(self)




    def characteristicsStatement(self):

        localctx = ResourceParser.CharacteristicsStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_characteristicsStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self.match(ResourceParser.CHARACTERISTICS)
            self.state = 197
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VersionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VERSION(self):
            return self.getToken(ResourceParser.VERSION, 0)

        def expression(self):
            return self.getTypedRuleContext(ResourceParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ResourceParser.RULE_versionStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVersionStatement" ):
                listener.enterVersionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVersionStatement" ):
                listener.exitVersionStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVersionStatement" ):
                return visitor.visitVersionStatement(self)
            else:
                return visitor.visitChildren(self)




    def versionStatement(self):

        localctx = ResourceParser.VersionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_versionStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 199
            self.match(ResourceParser.VERSION)
            self.state = 200
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ResourceIdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(ResourceParser.INTEGER, 0)

        def IDENTIFIER(self):
            return self.getToken(ResourceParser.IDENTIFIER, 0)

        def STRING(self):
            return self.getToken(ResourceParser.STRING, 0)

        def getRuleIndex(self):
            return ResourceParser.RULE_resourceId

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterResourceId" ):
                listener.enterResourceId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitResourceId" ):
                listener.exitResourceId(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitResourceId" ):
                return visitor.visitResourceId(self)
            else:
                return visitor.visitChildren(self)




    def resourceId(self):

        localctx = ResourceParser.ResourceIdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_resourceId)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 202
            _la = self._input.LA(1)
            if not(((((_la - 94)) & ~0x3f) == 0 and ((1 << (_la - 94)) & 7) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ResourceTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(ResourceParser.INTEGER, 0)
